--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <string name="start_game_button">Start</string>
+    <string name="refresh_button">Refresh</string>
 </resources>
