--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,9 @@
     <string name="title_activity_game">GameActivity</string>
     <string name="title_activity_result">ResultActivity</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
     <string name="start_game_button">Start</string>
     <string name="refresh_button">Refresh</string>
+    <string name="play_again_button">Play Again</string>
 </resources>
