--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,19 @@
 <resources>
-    <string name="app_name">GuessThePicture</string>
+    <string name="app_name">Guess The Picture</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_game">GameActivity</string>
-    <string name="title_activity_result">ResultActivity</string>
 
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_game">Play</string>
+    <string name="title_activity_result">Score</string>
+    <string name="title_activity_settings">Settings</string>
 
     <string name="start_game_button">Start</string>
     <string name="refresh_button">Refresh</string>
     <string name="play_again_button">Play Again</string>
+
+    <string name="present_score_text">Your score is:</string>
+    
+    <string name="download_images_first">Download some images first. Push Refresh.</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
